# rust_vulkan_api_generator

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: hello_triangle.rs
src/: lib.rs  main.rs
tests/: device.rs
vk/: Cargo.toml
vk/examples/: hello_triangle.rs
vk/src/: ktx.rs  lib.rs
vk/tests/: device.rs
vkgen/: Cargo.toml
vkgen/src/: main.rs
vkraw/: Cargo.toml  build.rs
vkraw/examples/: hello_triangle.rs  triangle.frag  triangle.vert
vkraw/tests/: device.rs
