[package]
name = "vk"
version = "0.0.1"
authors = ["Ashley Smith <ashleysmithgpu@gmail.com>"]
description = "Wrapped interface to Vulkan in rust"
repository = "https://github.com/ashleysmithgpu/rust_vulkan_api_generator"
keywords = ["vulkan"]
edition = "2018"

[dependencies]
libc = "0.2.24"
rspirv = "0.5.4"
spirv_headers = "1.3.4"
colored = "1.7.0"
num = "0.1.36"
cgmath = "0.17.0"

[target."cfg(windows)".dependencies]
vkraw = { path = "../vkraw", version = "0.0.1", features = ["VK_KHR_win32_surface", "VK_KHR_get_surface_capabilities2", "VK_EXT_swapchain_colorspace", "VK_EXT_full_screen_exclusive"] }
winapi = { version = "0.3.6", features = ["winuser", "libloaderapi"] }

# Enable after issue fixed: https://github.com/rust-lang/cargo/issues/2524
[target.'cfg(asd)'.dependencies]
#vkraw = { path = "../vkraw", version = "0.0.1", features = ["xcb", "VK_KHR_xcb_surface"] }
#xcb = { version = "0.8" }

[dev-dependencies]
gltf = "0.11.3"
byteorder = "1.0"

# TODO: need to build the bin target first, cargo does not support this

[lib]
name = "vk"
path = "src/lib.rs"
