[package]
name = "vkraw"
version = "0.0.1"
authors = ["Ashley Smith <ashleysmithgpu@gmail.com>"]
description = "Raw interface to Vulkan in rust"
repository = "https://github.com/ashleysmithgpu/rust_vulkan_api_generator"
keywords = ["vulkan"]
edition = "2018"

[features]
VK_EXT_debug_report = []
VK_KHR_surface = []
VK_KHR_swapchain = []
VK_KHR_display = []
VK_KHR_display_swapchain = []
VK_KHR_xcb_surface = []
VK_KHR_win32_surface = []
VK_KHR_get_surface_capabilities2 = []
VK_EXT_swapchain_colorspace = []
VK_EXT_full_screen_exclusive = []

default = ["VK_KHR_surface", "VK_KHR_swapchain", "VK_KHR_display", "VK_KHR_display_swapchain", "VK_EXT_debug_report"]

[dependencies]
libc = "0.2.24"
bitflags = "1.0"

[dependencies.xcb]
version = "0.8"
optional = true

[dependencies.winapi]
version = "0.3.6"
optional = true
features = ["winuser", "libloaderapi"]

[dev-dependencies]
glm = "0.2.3"
num = "0.1.36"

# TODO: need to build the bin target first, cargo does not support this

[lib]
name = "vkraw"
path = "src/lib.rs"

# TODO: need to run the generator before the lib target builds, cargo does not support this
build = "build.rs"

[[test]]
path = "tests/device.rs"
name = "device"
